--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .image {
-  background-color: #490D40;
+  background-color: #490d40;
   background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;
   background-size: cover;
   height: 570px;
@@ -22,10 +22,9 @@
   font-size: 1.2em;
 }
 .image p .btn:hover {
-  color: #C57ED3;
-  border-color: #C57ED3;
+  color: #c57ed3;
+  border-color: #c57ed3;
 }
-
 .navbar {
   height: 80px;
   background-color: transparent;
@@ -34,63 +33,60 @@
   z-index: 100;
   transition: background-color 1s ease 0s;
 }
-
 .navbar-default .navbar-brand {
   margin-top: 10px;
   color: white;
 }
 .navbar-default .navbar-brand:hover {
-  color: #C57ED3;
-  border: 1px solid #C57ED3;
+  color: #c57ed3;
+  border: 1px solid #c57ed3;
 }
 .navbar-default .navbar-nav > li > a {
   color: white;
   margin: 10px 5px 5px 5px;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:active, .navbar-default .navbar-nav > li > a:focus {
-  color: #C57ED3;
-  border: 1px solid #C57ED3;
+  color: #c57ed3;
+  border: 1px solid #c57ed3;
 }
 .navbar-default .navbar-nav > li > a:visited {
-  color: #C57ED3;
+  color: #c57ed3;
   text-decoration: none;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
-  color: #C57ED3;
+  color: #c57ed3;
 }
 .navbar-default .navbar-toggle {
-  border-color: #C57ED3;
+  border-color: #c57ed3;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: #490D40;
+  background-color: #490d40;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  color: #C57ED3;
-  background-color: #C57ED3;
+  color: #c57ed3;
+  background-color: #c57ed3;
 }
 .navbar-default .navbar-collapse.collapse.in ul {
-  background-color: #490D40;
+  background-color: #490d40;
 }
-
 /* Solid class attached on scroll past first section */
 .navbar.solid {
-  background-color: #490D40;
+  background-color: #490d40;
   transition: background-color 1s ease 0s;
   box-shadow: 0 0 4px grey;
 }
 .navbar.solid .navbar-brand {
-  color: #C57ED3;
+  color: #c57ed3;
   transition: color 1s ease 0s;
 }
 .navbar.solid .navbar-nav > li > a {
-  color: #C57ED3;
+  color: #c57ed3;
   transition: color 1s ease 0s;
 }
-
 .about {
-  background-color: #C57ED3;
-  color: #490D40;
+  background-color: #c57ed3;
+  color: #490d40;
   height: 600px;
   text-align: center;
   margin-top: -20px;
