--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .image {
-  background-color: #490D40;
+  background-color: #FFFFFF;
   background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;
   background-size: cover;
   height: 570px;
