--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
 
 /* Solid class attached on scroll past first section */
 .navbar.solid {
-  background-color: #490D40;
+  background-color: #FFFFFF;
   transition: background-color 1s ease 0s;
   box-shadow: 0 0 4px grey;
 }
