--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
 }
 
 .about {
-  background-color: #C57ED3;
+  background-color: #FFFFFF;
   color: #FFFFFF;
   height: 600px;
   text-align: center;
@@ -151,16 +151,16 @@
   margin: 10px 5px 5px 5px;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:active, .navbar-default .navbar-nav > li > a:focus {
-  color: #c57ed3;
+  color: #FFFFFF;
   border: 1px solid #FFFFFF;
 }
 .navbar-default .navbar-nav > li > a:visited {
-  color: #c57ed3;
+  color: #FFFFFF;
   text-decoration: none;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
-  color: #c57ed3;
+  color: #FFFFFF;
 }
 .navbar-default .navbar-toggle {
   border-color: #FFFFFF;
@@ -191,7 +191,7 @@
 }
 .about {
   background-color: #FFFFFF;
-  color: #490d40;
+  color: #FFFFFF;
   height: 600px;
   text-align: center;
   margin-top: -20px;
