--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@
   color: white;
 }
 .navbar-default .navbar-brand:hover {
-  color: #c57ed3;
+  color: #FFFFFF;
   border: 1px solid #FFFFFF;
 }
 .navbar-default .navbar-nav > li > a {
