--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@
 }
 /* Solid class attached on scroll past first section */
 .navbar.solid {
+  color: #000000
   background-color: #FFFFFF;
   transition: background-color 1s ease 0s;
   box-shadow: 0 0 4px grey;
