--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .image {
   background-color: #FFFFFF;
-  background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;
+  /*background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;*/
   background-size: cover;
   height: 570px;
   margin-top: -20px;
@@ -106,7 +106,7 @@
 
 .image {
   background-color: #FFFFFF;
-  background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;
+  /*background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;*/
   background-size: cover;
   height: 570px;
   margin-top: -20px;
